ingress/webapp-color/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: webapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: color
