ingress/webapp-color/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webapp-color.lab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 8080
